Demo working with security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=org.sqlite.JDBC
 
-auth0.issuer=http://chrisdoberman.auth0.com
-auth0.apiAudience=localhost:8080
+auth0.issuer=https://chrisdoberman.auth0.com/
+auth0.apiAudience=http://localhost:8080
 
+#logging.level.org.springframework.security=debug
